Ediciones y añadidos en los services y controllers de User y Game

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+server.port = 8081
+#Configuración de base de datos
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/micro1
+model_mapper_db
 spring.datasource.username= micro1
 spring.datasource.password= 123123
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
